[package]
name = "pinturapp"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", default-features = true, features = ["wgpu"] }
egui = "0.34.1"
egui-wgpu = "0.34.1"
glam = "0.22"
raw-window-handle = "0.6"
pollster = "0.2"
env_logger = "0.11"
log = "0.4"
image = "0.24"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_Pointer", "Win32_UI_Accessibility"] }
libloading = "0.8"
wintab_lite = "0.1"
bytemuck = { version = "1.19", features = ["derive"] }
half = "2.4"
